fix: alteração do link contato

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,7 +18,7 @@
   <nav>
     <a href="index.html"><i class="fas fa-home"></i> Início</a>
     <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
-    <a href="#"><i class="fas fa-envelope"></i> Contato</a>
+    <a href="contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
   </nav>
 </header>
 
@@ -83,12 +83,12 @@
   </section>
 
 <div class="nav-mobile">
-  <nav>
-    <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
-    <a href="index.html"><i class="fas fa-home"></i></a>
-    <a href="#"><i class="fas fa-envelope"></i></a>
-  </nav>
-</div>
+      <nav>
+        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
+      </nav>
+    </div>
 <footer>
   <div class="footer-section footer-yellow-light">
     <div>Email: contato@eletroge.com</div>
