--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -20,7 +20,7 @@
         <a href="servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="#"><i class="fas fa-envelope"></i> Contato</a>
+        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
       </nav>
     </header>
     <section class="quadros-wrapper">
@@ -47,19 +47,19 @@
       <div class="quadros-obras">
         <div class="grade-quadros">
           <div class="card-obras">
-            <a href="#">
+            <a href="obras.html">
               <div
                 class="imagem-bg-obra"
                 style="background-image: url('../img/instalcao-spda.jpeg')"
               ></div>
             </a>
             <div class="info-quadros">
-              <a href="#">
+              <a href="obras.html">
                 <span class="titulo-quadro-obra">Teste nome da obra </span>
               </a>
 
               <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
+              <a class="action" href="obras.html">
                 <p class="p-veja-mais">Veja mais</p>
                 <span aria-hidden="true"> → </span>
               </a>
@@ -108,224 +108,15 @@
             </div>
           </div>
         </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="grade-quadros">
-          <div class="card-obras">
-            <a href="#">
-              <div
-                class="imagem-bg-obra"
-                style="background-image: url('../img/instalcao-spda.jpeg')"
-              ></div>
-            </a>
-            <div class="info-quadros">
-              <a href="#">
-                <span class="titulo-quadro-obra">Teste nome da obra </span>
-              </a>
-
-              <p class="desc-quadro-obra">Teste da descrição da obra</p>
-              <a class="action" href="#">
-                <p class="p-veja-mais">Veja mais</p>
-                <span aria-hidden="true"> → </span>
-              </a>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </section>
     <!-- Rodapé -->
-    <div class="nav-mobile">
+   <div class="nav-mobile">
       <nav>
-        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
         <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="#"><i class="fas fa-envelope"></i></a>
+        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
     <footer>
