--- a/public/views/servicos-eletroge.html
+++ b/public/views/servicos-eletroge.html
@@ -165,20 +165,21 @@
     </section>
 
     <section class="quadros-wrapper">
-      <h1 class="titulo-quadro">Nossos Principais Serviços</h1>
+      <h2 class="titulo-quadro">Nossos Principais Serviços</h2>
+      <hr width="60%">
       <div class="quadros">
         <div
           class="quadro"
           style="background-image: url('../img/instalacao-alta-tensao.jpg')"
         >
-          <h2>Alta Tensão</h2>
+          <h3>Alta Tensão</h3>
           <div class="quadro-banner">Confiabilidade e segurança</div>
         </div>
         <div
           class="quadro"
           style="background-image: url('../img/coca-cola-img-industrial.jpg')"
         >
-          <h2>Serviços Industriais</h2>
+          <h3>Serviços Industriais</h3>
           <div class="quadro-banner">
             A segurança que a sua industria precisa
           </div>
@@ -187,7 +188,7 @@
           class="quadro"
           style="background-image: url('../img/instalcao-spda.jpeg')"
         >
-          <h2>SPDA</h2>
+          <h3>SPDA</h3>
           <div class="quadro-banner">Segurança para edificações e vidas</div>
         </div>
         <div class="btn-wrapper-quadros">
@@ -199,11 +200,11 @@
         </div>
       </div>
     </section>
-    <div class="nav-mobile">
+     <div class="nav-mobile">
       <nav>
-        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
         <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="#"><i class="fas fa-envelope"></i></a>
+        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
     <footer>
