--- a/public/style.css
+++ b/public/style.css
@@ -197,10 +197,12 @@ header {
 }
 
 /* Quadros de serviços */
-.quadros-wrapper h2 {
+.quadros-wrapper h3 {
   text-align: center;
   margin-bottom: 40px;
   font-size: 40px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+
 }
 .quadros {
   display: flex;
@@ -469,7 +471,7 @@ a .botao-andamento {
 }
 hr {
   margin: auto;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1rem;
   justify-content: center;
   border: none;
   height: 1px; /* Fina */
@@ -937,19 +939,21 @@ img {
   }
 }
 
-/* CSS contate-eletroge.html*/
+/* CSS contato-eletroge.html*/
+.body-contact-us{
+  background: url(img/img-principal.jpg);
+}
 .main-contact-us {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  background: url(img/img-principal.jpg);
 }
 .div-form-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;  /* <== adiciona aqui */
+  align-items: center; 
   margin: auto;
   width: 50rem;
   height: 42rem;
@@ -1167,12 +1171,43 @@ img {
     }
   }
 }
+.div-form-container {
+    width: 90%;
+    height: auto;
+    padding: 1.5rem;
+  }
 
+  /* Ajusta título e espaçamentos */
+  .div-form-container > h2 {
+    font-size: 1.8rem;
+    padding-top: 1rem;
+  }
 
-}
+  /* Campos de formulário ocupam mais espaço */
+  .div-form-container form .input-container {
+    width: 100%;
+    margin-top: 1.5rem;
+  }
 
+  /* Inputs e textarea adaptados */
+  .div-form-container input,
+  .div-form-container textarea,
+  .div-form-container button {
+    font-size: 1rem;
+    padding: 0.9rem 1rem 0.9rem 3rem;
+  }
 
-/*@media (max-width:){}
+  /* Ícones ajustados */
+  .div-form-container i {
+    font-size: 1rem;
+    left: 0.8rem;
+  }
 
-
-@media (max-width:){}
+  /* Textarea menor em altura para telas médias */
+  .div-form-container textarea {
+    height: 12rem;
+  }
+  footer > .footer-white{
+    display: none;
+  }
+} 
