--- a/public/views/obras.html
+++ b/public/views/obras.html
@@ -21,7 +21,7 @@
         <a href="servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="#"><i class="fas fa-envelope"></i> Contato</a>
+        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
       </nav>
     </header>
 
@@ -66,9 +66,9 @@
     </main>
     <div class="nav-mobile">
       <nav>
-        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
         <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="#"><i class="fas fa-envelope"></i></a>
+        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
     <!--Rodapé-->
