--- a/public/views/servicos-eletroge.html
+++ b/public/views/servicos-eletroge.html
@@ -200,7 +200,7 @@
         </div>
       </div>
     </section>
-     <div class="nav-mobile">
+    <div class="nav-mobile">
       <nav>
         <a href="obras-model.html"><i class="fas fa-tools"></i></a>
         <a href="index.html"><i class="fas fa-home"></i></a>
@@ -224,5 +224,6 @@
         />
       </div>
     </footer>
+    <script src="../script.js"></script>
   </body>
 </html>
