--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -35,7 +35,7 @@
             <span class="radio-label">Geral</span>
           </label>
           <label>
-            <input type="radio" name="filtro-obra" onclick="filterStatusConstruction()"/>
+            <input type="radio" name="filtro-obra" onclick="filterStatusConstructio()"/>
             <span class="radio-label">Em andamento</span>
           </label>
           <label>
