addd: fetch criado com sucesso!

--- a/public/views/obras.html
+++ b/public/views/obras.html
@@ -27,22 +27,19 @@
 
     <main class="main-obras">
       <section id="section-obras">
-        <h2 id="h2-nome-obra">Nome da Obra</h2>
+        <h2 id="h2-nome-obra"><!-- nome obra --></h2>
         <hr />
         <div id="content-obras">
           <div id="images-obras">
             <div id="thumbnail-images-obras">
-              <img src="../img/coca-cola-img-industrial.jpg" alt="" />
-              <img src="../img/img-principal.jpg" alt="" />
-              <img src="../img/instalacao-alta-tensao.jpg" alt="" />
-              <img src="../img/instalcao-spda.jpeg" alt="" />
+            <!-- Imagens da obra -->
             </div>
             <div id="main-image-obras">
               <img src="../img/coca-cola-img-industrial.jpg" alt="" />
             </div>
           </div>
           <div id="description-obras">
-            <progress value="30" max="100" placeholder="teste"></progress>
+            <progress value="" max="100" placeholder="teste"></progress>
 
             <div id="tag-obras">
               <ul>
@@ -55,10 +52,7 @@
               </ul>
             </div>
             <p id="span-description-obras">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              mollitia nisi incidunt quos commodi dolore repellendus provident,
-              similique autem, obcaecati quidem, magnam consectetur ducimus sunt
-              aperiam eius. Placeat, dolore aliquam?
+              <!-- descricao da obra -->
             </p>
           </div>
         </div>
