--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -31,15 +31,15 @@
       <div class="filtro-quadros">
         <div>
           <label>
-            <input type="radio" name="filtro-obra" checked="" onclick="filterStatusConstruction()"/>
+            <input type="radio" name="filtro-obra" checked="" onclick="carregarCardObras()"/>
             <span class="radio-label">Geral</span>
           </label>
           <label>
-            <input type="radio" name="filtro-obra" onclick="filterStatusConstructio()"/>
+            <input type="radio" name="filtro-obra" onclick="filtrarObrasEmAndamento()"/>
             <span class="radio-label">Em andamento</span>
           </label>
           <label>
-            <input type="radio" name="filtro-obra" onclick="filterStatusConstruction()"/>
+            <input type="radio" name="filtro-obra" onclick="carregarCardObras()"/>
             <span class="radio-label">Finalizadas</span>
           </label>
         </div>
