feat: ajuste dos filtros das obras

--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -39,7 +39,7 @@
             <span class="radio-label">Em andamento</span>
           </label>
           <label>
-            <input type="radio" name="filtro-obra" onclick="carregarCardObras()"/>
+            <input type="radio" name="filtro-obra" onclick="filtrarObrasFinalizadas()"/>
             <span class="radio-label">Finalizadas</span>
           </label>
         </div>
