--- a/public/views/obras.html
+++ b/public/views/obras.html
@@ -25,38 +25,9 @@
       </nav>
     </header>
 
-    <main class="main-obras">
+    <main id="main-obras">
       <section id="section-obras">
-        <h2 id="h2-nome-obra"><!-- nome obra --></h2>
-        <hr />
-        <div id="content-obras">
-          <div id="images-obras">
-            <div id="thumbnail-images-obras">
-            <!-- Imagens da obra -->
-            </div>
-            <div id="main-image-obras">
-              <img src="../img/coca-cola-img-industrial.jpg" alt="" />
-            </div>
-          </div>
-          <div id="description-obras">
-            <progress value="" max="100" placeholder="teste"></progress>
-
-            <div id="tag-obras">
-              <ul>
-                <i class="fa-solid fa-bolt" style="color: #ffd43b"> </i>
-                <h4>SPDA</h4>
-              </ul>
-              <ul>
-                <i class="fa-solid fa-plug" style="color: #ffd43b"> </i>
-                <h4>Alta Tensão</h4>
-              </ul>
-            </div>
-            <p id="span-description-obras">
-              <!-- descricao da obra -->
-            </p>
-          </div>
-        </div>
-      </section>
+      </section>                                             
     </main>
     <div class="nav-mobile">
       <nav>
