feat: ajustes feitos na query, desenvolvendo o retorno da api no front end

--- a/public/views/obras.html
+++ b/public/views/obras.html
@@ -66,6 +66,6 @@
         });
       });
     </script>
-    <script src="../script.js"></script>
+    <script src="../script.obras.js"></script>
   </body>
 </html>
