--- a/public/views/obras.html
+++ b/public/views/obras.html
@@ -21,13 +21,15 @@
         <a href="servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
+        <a href="contato-eletroge.html"
+          ><i class="fas fa-envelope"></i> Contato</a
+        >
       </nav>
     </header>
 
     <main id="main-obras">
       <section id="section-obras">
-      </section>                                             
+      </section>
     </main>
     <div class="nav-mobile">
       <nav>
