feat: alteração do footer das paginas HTML

--- a/public/views/contato-eletroge.html
+++ b/public/views/contato-eletroge.html
@@ -71,9 +71,10 @@
         <div>Email: contato@eletroge.com</div>
         <div>WhatsApp: (11) 91234-5678</div>
         <div>Telefone: (11) 1234-5678</div>
+        <div>Av. Alexandre Santoro, 1381 Londrina - PR</div>
       </div>
       <div class="footer-section footer-yellow-dark">
-        <strong>Entre em contato conosco a qualquer momento!</strong>
+        <strong>Entre em contato conosco!</strong>
       </div>
       <div class="footer-section footer-white">
         <img
