--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,110 +1,108 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EletroGe</title>
-  <link rel="stylesheet" href="../style.css" />
-  <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
-</head>
-<body>
-<header>
-  <a href="index.html">
-    <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
-  </a>
-  <nav>
-    <a href="index.html"><i class="fas fa-home"></i> Início</a>
-    <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
-    <a href="contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
-  </nav>
-</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EletroGe</title>
+    <link rel="stylesheet" href="../style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header>
+      <a href="index.html">
+        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      </a>
+      <nav>
+        <a href="index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="servicos-eletroge.html"
+          ><i class="fas fa-tools"></i> Serviços</a
+        >
+        <a href="contato-eletroge.html"
+          ><i class="fas fa-envelope"></i> Contato</a
+        >
+      </nav>
+    </header>
 
-<div class="hero">
-  <img src="../img/img-principal.jpg" alt="Imagem principal" />
-  <div class="hero-text">
-    <h1>
-      Conheça o Grupo EletroGe
-    </h1>
-  </div>
-  <!-- 
-    <a href="saiba-mais.html">
-      <button>Saiba Mais</button>
-    </a>
-    -->
-</div>
+    <div class="hero">
+      <img src="../img/img-principal.jpg" alt="Imagem principal" />
+      <div class="hero-text">
+        <h1>Conheça o Grupo EletroGe</h1>
+      </div>
+    </div>
 
-<section class="features">
-  <div class="feature">
-    <i class="fas fa-bolt"></i>
-    <h2>Energia</h2>
-    <p>
-      Oferecemos soluções modernas em energia elétrica para residências e
-      empresas com eficiência e segurança.
-    </p>
-  </div>
-  <div class="feature">
-    <i class="fas fa-tools"></i>
-    <h2>Manutenção</h2>
-    <p>
-      Serviços especializados de manutenção elétrica preventiva e corretiva
-      para todos os tipos de instalações.
-    </p>
-  </div>
-  <div class="feature">
-    <i class="fas fa-lightbulb"></i>
-    <h2>Inovação</h2>
-    <p>
-      Investimos constantemente em novas tecnologias para garantir os melhores
-      resultados aos nossos clientes.
-    </p>
-  </div>
-</section>
+    <section class="features">
+      <div class="feature">
+        <i class="fas fa-bolt"></i>
+        <h2>Energia</h2>
+        <p>
+          Oferecemos soluções modernas em energia elétrica para residências e
+          empresas com eficiência e segurança.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-tools"></i>
+        <h2>Manutenção</h2>
+        <p>
+          Serviços especializados de manutenção elétrica preventiva e corretiva
+          para todos os tipos de instalações.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-lightbulb"></i>
+        <h2>Inovação</h2>
+        <p>
+          Investimos constantemente em novas tecnologias para garantir os
+          melhores resultados aos nossos clientes.
+        </p>
+      </div>
+    </section>
 
-<section class="valores">
-  <h2>Valores da EletroGe</h2>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in
-    ligula nec eros convallis dapibus. Nullam sodales facilisis orci, at
-    suscipit arcu tristique eu. In sed eros sapien. Praesent fringilla at urna
-    nec hendrerit. Integer tristique leo nec erat dignissim, sed viverra justo
-    tristique. Curabitur sit amet eros facilisis, finibus massa in, volutpat
-    erat.
-  </p>
-</section>
-<section class="obras-andamento">
-  <h2>Obras em Andamento</h2>
-  <p>Acompanhe nossos projetos em execução e veja como estamos levando energia de qualidade a mais clientes todos os dias.</p>
-  <a href="obras-model.html">
-    <button class="botao-andamento">Ver Projetos</button>
-  </a>
-  </section>
+    <section class="valores">
+      <h2>Nossa História</h2>
+      <p>
+        O Grupo Eletroge surgiu á 19 anos com o proposito de levar serviços
+        especializados e modernos na área de instalções elétricas, com
+        responsabilidade, eficiência e segurança para todos os nossos clientes.
+      </p>
+    </section>
+    <section class="obras-andamento">
+      <h2>Obras em Andamento</h2>
+      <p>
+        Acompanhe nossos projetos em execução e veja como estamos levando
+        energia de qualidade a mais clientes todos os dias.
+      </p>
+      <a href="obras-model.html">
+        <button class="botao-andamento">Ver Projetos</button>
+      </a>
+    </section>
 
-<div class="nav-mobile">
+    <div class="nav-mobile">
       <nav>
         <a href="obras-model.html"><i class="fas fa-tools"></i></a>
         <a href="index.html"><i class="fas fa-home"></i></a>
         <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
-<footer>
-  <div class="footer-section footer-yellow-light">
-    <div>Email: contato@eletroge.com</div>
-    <div>WhatsApp: (11) 91234-5678</div>
-    <div>Telefone: (11) 1234-5678</div>
-  </div>
-  <div class="footer-section footer-yellow-dark">
-    <strong>Entre em contato conosco a qualquer momento!</strong>
-  </div>
-  <div class="footer-section footer-white">
-    <img
-            src="../img/logo-eletroge.png"
-            alt="Logo EletroGe"
-            class="img-eletroge-rodape"
-    />
-  </div>
-</footer>
-</body>
+    <footer>
+      <div class="footer-section footer-yellow-light">
+        <div>Email: contato@eletroge.com</div>
+        <div>WhatsApp: (11) 91234-5678</div>
+        <div>Telefone: (11) 1234-5678</div>
+        <div>Av. Alexandre Santoro, 1381 Londrina - PR</div>
+      </div>
+      <div class="footer-section footer-yellow-dark">
+        <strong>Entre em contato conosco!</strong>
+      </div>
+      <div class="footer-section footer-white">
+        <img
+          src="../img/logo-eletroge.png"
+          alt="Logo EletroGe"
+          class="img-eletroge-rodape"
+        />
+      </div>
+    </footer>
+  </body>
 </html>
