--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,8 +6,8 @@
     <title>EletroGe</title>
     <link rel="stylesheet" href="../style.css" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
   </head>
   <body>
