--- a/public/adm/views/login.page.html
+++ b/public/adm/views/login.page.html
@@ -64,7 +64,7 @@
                 <button
                     type="button"
                     class="btn btn-warning w-100"
-                    onclick="loginADM()"
+                    id="login-button"
                 >
                     Fazer Login
                 </button>
@@ -77,6 +77,6 @@
             </div>
         </div>
         </div>
-        <script src="adm.page.js"></script>
+        <script type="module" src="../js/pages/login.page.js"></script>
     </body>
     </html>
