--- a/public/adm/views/login.page.html
+++ b/public/adm/views/login.page.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-7">
             <img
-                src="../img/coca-cola-img-industrial.jpg"
+                src="/public/client/img/coca-cola-img-industrial.jpg";
                 class="p-0 w-100 vh-100"
                 alt=""
                 srcset=""
@@ -28,7 +28,7 @@
             <div class="col-3 d-flex flex-column justify-content-center">
             <div class="row">
                 <div class="img-logo text-center">
-                <img src="../img/logo-eletroge.png" width="200px" />
+                <img src="/public/client/img/logo-eletroge.png" width="200px" />
                 </div>
             </div>
             <form>
