--- a/public/adm/views/editarObra.adm.html
+++ b/public/adm/views/editarObra.adm.html
@@ -58,7 +58,7 @@
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
             <a class="navbar-brand text-dark fw-bold" href="dashboard.adm.html">
-                <img src="../img/logo-eletroge.png" width="100px" />
+                <img src="/public/client/img/logo-eletroge.png" width="100px" />
             </a>
 
             <div class="collapse navbar-collapse">
