--- a/public/adm/views/login.page.html
+++ b/public/adm/views/login.page.html
@@ -35,7 +35,7 @@
             <div class="col-3 d-flex flex-column justify-content-center">
                 <div class="row">
                     <div class="img-logo text-center">
-                        <img src="../../client/img/logo-eletroge.png" width="200px" />
+                        <img src="/public/client/img/logo-eletroge.png" width="200px" />
                     </div>
                 </div>
                 <form>
