--- a/public/adm/views/editarObra.adm.html
+++ b/public/adm/views/editarObra.adm.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self'; 
-    connect-src 'self' http://localhost:3000 https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://res.cloudinary.com; 
-    script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; 
-    style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; 
-    img-src 'self' data: https: http:; 
-    font-src 'self' https://cdnjs.cloudflare.com;
-">    <title>Edição de Obras</title>
+  default-src 'self';
+  connect-src 'self' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://res.cloudinary.com;
+  script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+  style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+  img-src 'self' data: https:;
+  font-src 'self' https://cdnjs.cloudflare.com;
+">
+   <title>Edição de Obras</title>
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
         rel="stylesheet"
