--- a/public/adm/views/deletarObra.adm.html
+++ b/public/adm/views/deletarObra.adm.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="Content-Security-Policy" content="
     default-src 'self'; 
-    connect-src 'self' http://localhost:3000 https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://res.cloudinary.com; 
+    connect-src 'self'  https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://res.cloudinary.com; 
     script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; 
     style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; 
     img-src 'self' data: https: http:; 
