feat: ajustes de link de CSS e JS

--- a/public/client/views/servicos-eletroge.html
+++ b/public/client/views/servicos-eletroge.html
@@ -16,7 +16,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="public/img/favicon.ico" type="image/x-icon" />
     <title>Serviços - EletroGe</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/public/client/style.css" />
+
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -225,6 +226,6 @@
         />
       </div>
     </footer>
-    <script src="../script.js"></script>
+    <script src="/client/script.js"></script>
   </body>
 </html>
