--- a/public/client/views/obras-model.html
+++ b/public/client/views/obras-model.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EletroGe</title>
-    <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="/public/client/style.css" />
+
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -75,6 +76,6 @@
         />
       </div>
     </footer>
-    <script src="../script.js"></script>
+    <script src="/public/client/script.js"></script>
   </body>
 </html>
