--- a/public/client/views/obras.html
+++ b/public/client/views/obras.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/public\client\style.css" />
+
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -57,6 +58,6 @@
         />
       </div>
     </footer>
-    <script src="../script.obras.js"></script>
+    <script src="/public/client/script.js"></script>
   </body>
 </html>
