--- a/public/client/views/index.html
+++ b/public/client/views/index.html
@@ -13,21 +13,21 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+        <img src="/client/img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
       </a>
       <nav>
-        <a href="index.html"><i class="fas fa-home"></i> Início</a>
-        <a href="servicos-eletroge.html"
+        <a href="/client/views/index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="/client/views/servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="contato-eletroge.html"
+        <a href="/client/views/contato-eletroge.html"
           ><i class="fas fa-envelope"></i> Contato</a
         >
       </nav>
     </header>
 
     <div class="hero">
-      <img src="../img/img-principal.jpg" alt="Imagem principal" />
+      <img src="/client/img/img-principal.jpg" alt="Imagem principal" />
       <div class="hero-text">
         <h1>Conheça o Grupo EletroGe</h1>
       </div>
@@ -74,16 +74,16 @@
         Acompanhe nossos projetos em execução e veja como estamos levando
         energia de qualidade a mais clientes todos os dias.
       </p>
-      <a href="obras-model.html">
+      <a href="/client/views/obras-model.html">
         <button class="botao-andamento">Ver Projetos</button>
       </a>
     </section>
 
     <div class="nav-mobile">
       <nav>
-        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
-        <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
+        <a href="/client/views/obras-model.html"><i class="fas fa-tools"></i></a>
+        <a href="/client/views/index.html"><i class="fas fa-home"></i></a>
+        <a href="/client/views/contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
     <footer>
@@ -98,7 +98,7 @@
       </div>
       <div class="footer-section footer-white">
         <img
-          src="../img/logo-eletroge.png"
+          src="/client/img/logo-eletroge.png"
           alt="Logo EletroGe"
           class="img-eletroge-rodape"
         />
